--- a/Photo Gallery/style.css
+++ b/Photo Gallery/style.css
@@ -3,7 +3,7 @@ body{
     background: linear-gradient(to top,lightgreen, lightpink);
     font-family: 'Courier New', Courier, monospace;
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
     justify-content: center;
     align-items: center;
     text-align: center;
