--- a/English Dictionary/style.css
+++ b/English Dictionary/style.css
@@ -32,12 +32,12 @@ body{
 }
 
 .input{
-    height: 55px;
-    width: 300px;
+    height: 40px;
+    /* width: 300px; */
     background-color:rgb(211, 219, 226);
     border-color: rgb(153, 160, 167);
     font-size: 16px;
-    padding: 0 8px;
+    /* padding: 0 8px; */
     border-radius: 7px;
 
 }
