--- a/BMI Calculate/style.css
+++ b/BMI Calculate/style.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .container{
-    background-color: rgb(84, 94, 117.1);
+    background-color: rgb(84, 94, 117,.9);
     border-radius: 7px;
     padding: 20px;
     display: flex;
