--- a/Temperature/style.css
+++ b/Temperature/style.css
@@ -35,7 +35,8 @@ body{
 }
 
 input{
-    padding: 10px ;border-radius: 7px;
+    padding: 10px ;
+    border-radius: 7px;
     border: none;
     outline: none;
     margin-left: 50px;
