--- a/Currency convertor/style.css
+++ b/Currency convertor/style.css
@@ -39,6 +39,7 @@ select{
     border: none;
     box-shadow: 2px 2px 10px black;
     background-color: rgb(160, 145, 145);
+    margin-bottom: 20px;
 
 }
 input{
