--- a/Digital clock/style.css
+++ b/Digital clock/style.css
@@ -5,20 +5,27 @@ body{
     align-items: center;
     height: 100vh;
     justify-content: center;
-    background: url("51982.jpg");
+    background: url("78016.jpg");
     background-size: cover;
     user-select: none;
     font-family: 'Anton', sans-serif;
     /* font-family: 'Poppins', sans-serif; */
+    overflow: none;
 }
-
+.container{
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0,.4);
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px black;
+}
 
 h2{
     text-transform: uppercase;
     letter-spacing: 3px;
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
-    color: rgb(191, 217, 240);
+    color: rgb(163, 163, 211);
 }
 .clock{
 
@@ -32,21 +39,21 @@ h2{
 .clock span{
     width: 80px;
     height: 80px;
-    background: rgba(253, 253, 253, 0.3);
+    background: rgba(163, 163, 211);
     opacity: .8;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    border-radius: 10px;
-    text-shadow: 2px 2px 3px rgba(0,0,0,.5);
+    border-radius: 7px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,.6);
     margin: 10px;
 }
-.clock .text{
+span.text{
     
     height: 30px;
-    font-size: 10px;
+    font-size: 15px;
     text-transform: uppercase;
     letter-spacing: 2px;
     background: rgb(163, 163, 211);
@@ -54,17 +61,13 @@ h2{
     
 }
 
-.clock #ampm{
+#ampm{
     bottom: 0;
     position: absolute;
     width: 60px;
-    height: 30px;
+    height: 40px;
     font-size: 20px;
-    background-color: green;
-}
-.text{
-    color: rgb(246, 248, 250);
-    font-size:12px;
-    
+    background-color: rgb(0, 0, 0);
+    margin: 15px
 
 }
