--- a/Darkwizards/style.css
+++ b/Darkwizards/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -7,11 +6,13 @@
   text-decoration: none;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow: none;
 }
 
 html {
   font-size: 62.5%;
   letter-spacing: 1px;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* NAVIGATION */
@@ -59,7 +60,7 @@ html {
 .active,
 .nav-link:hover {
   color: black;
-  background: #eeb42d;
+  background: #c0bfbd;
   border-radius: 1rem;
   font-size: 2rem;
 }
@@ -403,4 +404,8 @@ html {
   }
 }
 
+p{
+  color: rgb(3, 3, 3);
+  padding-left: 20px;
+}
 
