--- a/Digital clock/style.css
+++ b/Digital clock/style.css
@@ -26,6 +26,7 @@ h2{
     font-size: 35px;
     text-align: center;
     color: rgb(163, 163, 211);
+    text-shadow: 2px 2px 3px rgba(0,0,0,.6);;
 }
 .clock{
 
