--- a/Rotate Gallery/style.css
+++ b/Rotate Gallery/style.css
@@ -8,6 +8,8 @@ body{
     justify-content: center;
     background-color:rgb(0, 0, 0);
     overflow: hidden;
+    background: rgb(13,0,235);
+    background: linear-gradient(145deg, rgba(13,0,235,1) 0%, rgba(2,0,230,1) 48%, rgba(250,250,250,1) 48%, rgba(255,255,255,1) 100%);
 }
 
 .image{
